change button to singleClassRegistration

--- a/custom/testapp/templates/core/view_eventregistrations.html
+++ b/custom/testapp/templates/core/view_eventregistrations.html
@@ -166,7 +166,7 @@
 <hr />
 
 <p>
-<a class="btn btn-secondary btn-sm" href="{% url 'registration' %}">{% trans "Class Registration Page" %}</a>
+<a class="btn btn-secondary btn-sm" href="{% url 'singleClassRegistration' event.uuid %}">{% trans "Class Registration Page" %}</a>
 <a class="btn btn-secondary btn-sm" href="{% url 'viewregistrations_selectevent' %}">{% trans "Select Another Class" %}</a>
 </p>
 
