--- a/custom/testapp/templates/menu/language_chooser.html
+++ b/custom/testapp/templates/menu/language_chooser.html
@@ -1,9 +1,24 @@
 {% load i18n menu_tags sekizai_tags %}
 
 {% if languages|length > 1 %}
-{% for language in languages %}
-<li class="child{% if current_language == language.0 %} active{% endif %} nav-item" >
-	<a href="{% page_language_url language.0 %}" class="nav-link">{{ language.1 }}</a>
+{% get_language_info for current_language as lang %}
+<li class="nav-item dropdown">
+	{% for language in languages %}
+	{% if current_language == language.0 %}
+		<a class="nav-link dropdown-toggle pl-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ language.1 }}<span class="caret"></span></a>
+	{% endif %}
+	{% endfor %}
+	
+	<ul class="dropdown-menu dropdown-menu-right" style="min-width: 3rem; position: absolute;">
+		{% for language in languages %}
+			{% if current_language != language.0 %}
+				<li><a href="{% page_language_url language.0 %}" class="dropdown-item">{{ language.1 }}</a></li>
+			{% endif %}
+		{% endfor %}
+	</ul>
 </li>
-{% endfor %}
 {% endif %}
+
+
+
+
