--- a/custom/testapp/templates/core/account_profile.html
+++ b/custom/testapp/templates/core/account_profile.html
@@ -39,7 +39,7 @@
 {% if staffmember %}
 
 	<h3 class="mt-4">{% trans "Current and Upcoming Series" %}</h3>
-
+	<div class="table-responsive">
 	<table class="table table-striped table-bordered">
 	<thead>
 		<tr>
@@ -65,7 +65,7 @@
 	{% endfor %}
 	</tbody>
 	</table>
-
+	</div>
 {% endif %}
 
 {% if customer or perms.cms.change_static_placeholder %}
