--- a/custom/testapp/templates/core/account_profile.html
+++ b/custom/testapp/templates/core/account_profile.html
@@ -22,13 +22,14 @@
 			{% if perms.core.view_own_instructor_stats %}
 				<a class="btn btn-outline-secondary" href="{% url 'staffMemberStats' %}">{% trans "Your Instructor Stats" %}</a>
 			{% endif %}
-			{% if perms.core.view_own_instructor_finances %}
+			{% if core.view_own_instructor_finances %}
 				<a class="btn btn-outline-secondary" href="{% url 'staffMemberPayments' %}">{% trans "Your Payment History" %}</a>
 			{% endif %}
 			{% if perms.core.update_instructor_bio %}
 				<a class="btn btn-outline-secondary" href="{% url 'staffBioChange' %}">{% trans "Update Your Contact Info" %}</a>
 			{% endif %}
 		{% endif %}
+		<a class="btn btn-outline-secondary" href="{% url 'account_change_password' %}">{% trans "Change Password" %}</a>
 	{% endif %}
 </div>
 
@@ -221,7 +222,7 @@
 	<tbody>
 	{% for eventreg in submitted_eventregs|dictsortreversed:'event.startTime' %}
 		<tr {% if forloop.counter > 5 %}class="prior_submitted collapse"{% endif %}>
-			<td>{{ eventreg.registration.fullName }}: {{ eventreg.registration.customer.email }}</td>
+			<td>{{ eventreg.customer.fullName }}: {{ eventreg.customer.email }}</td>
 			{% with eventreg.event as event %}
 			<td>{{ event.month|readable_month }} {{ event.year }}</td>
 			<td>{{ event.name }}</td>
