--- a/custom/testapp/templates/core/view_eventregistrations.html
+++ b/custom/testapp/templates/core/view_eventregistrations.html
@@ -9,7 +9,7 @@
 	<dt>{% trans "Total Students" %}:</dt><dd>{{ event.numRegistered }}</dd>
 	<dt>{% trans "Location" %}:</dt><dd>{{ event.location.name }}{% if event.room.name %} - {{ event.room.name }}{% endif %}</dd>
 	<dt>{% trans "Time" %}:</dt><dd>{{ event.startTime|date:'l, h:i A' }}</dd>
-	<dt>{% trans "Drop-Ins Permitted" %}:</dt><dd>{{ event.allowDropins|yesno }}</dd>
+	<dt>{% trans "Partner Required" %}:</dt><dd>{{ event.partnerRequired|yesno }}</dd>
 </dl>
 
 {% if 'core.checkin_customers' in perms %}
@@ -27,54 +27,86 @@
 
 {% endif %}
 
-<table class="classregsummary table table-responsive">
+<table class="classregsummary table table-striped table-responsive">
 <thead>
 	<tr>
 		{% if 'core.checkin_customers' in perms %}
 		<th>{% trans "Check In" %}</th>
 		{% endif %}
-		<th>{% trans "Name" %}</th>
-		<th>{% trans "This Series Price" %}</th>
+		<th>{% trans "Customer" %}</th>
+		<th>{% trans "Reg. Details" %}</th>
+		{% if event.partnerRequired %}<th>{% trans "Partner" %}</th>{% endif %}
+		<th>{% trans "Event Pricing" %}</th>
 		<th>{% trans "Total Payment" %}</th>
-		<th>{% trans "Role" %}</th>
-		<th>{% trans "Phone Number" %}</th>
-		<th>{% trans "Customer Email" %}</th>
 		<th>{% trans "All-Time Classes" %}</th>
 		<th>{% trans "Links" %}</th>
 	</tr>
 </thead>
 <tbody>
 {% for reg in registrations %}
-	<tr {% if reg.dropIn %}class="dropInReg" id="reg_id_{{ reg.id }}_occ_id_{{ reg.data.items }}"{% endif %}>
+	<tr>
 		{% if 'core.checkin_customers' in perms %}
 		<td>
-			<input type="checkbox" class="checkInCheckBox" id="reg_id_{{ reg.id }}" name="reg_id_{{ reg.id }}" value="{{ reg.id }}" />
+			<input type="checkbox" class="checkInCheckBox" id="reg_id_{{ reg.id }}" name="reg_id_{{ reg.id }}" value="{{ reg.id }}" 
+				{% if reg.dropIn %}data-drop-in="true" data-occurrence-ids="{% for occ in reg.occurrences.all %}{{ occ.id }}{% if not forloop.last %}|{% endif %}{% endfor %}"{%endif %}
+			/>
 		</td>
 		{% endif %}
 		<td>
-			{% if reg.registration.fullName != reg.registration.customer.fullName %}
-				<a href="" data-toggle="popover" title="{% trans 'Customer Name' %}" data-container="body" data-placement="top" data-content="{% trans 'Most recent reg. from this email address' %}: {{ reg.registration.customer.fullName }}">{{ reg.registration.fullName }}</a>
+			{% if reg.customer %}
+				{{ reg.customer.fullName }}
+				<br /><a href="mailto:{{ reg.customer.email }}">{{ reg.customer.email }}</a>
+				<br /><a href="tel:{{ reg.customer.phone }}">{{ reg.customer.phone }}</a>
+			{% elif reg.registration.invoice.fullName or reg.registration.invoice.email %}
+				{{ reg.registration.invoice.fullName }}
+				{% if reg.registration.invoice.fullName %}<br />{% endif %}
+				<a href="mailto:{{ reg.registration.invoice.email }}">{{ reg.registration.invoice.email }}</a>
+				<br /><a href="mailto:{{ reg.registration.invoice.phone }}">{{ reg.registration.invoice.phone }}</a>
 			{% else %}
-				{{ reg.registration.fullName }}
+				{% trans "N/A" %}
 			{% endif %}
 		</td>
 
-		<td {% if reg.warningFlag %}class="warning"{% elif reg.refundFlag %}class="info"{% endif %}>
-			{% if reg.discounted or reg.warningFlag %}
-				<strong>{% trans "Gross" %}:</strong> {{ reg.price|floatformat:2 }} <br />
-				<strong>{% trans "Net" %}:</strong> {{ reg.netPrice|floatformat:2 }}
-				{% if reg.refundFlag %}<br />
-				<strong>{% trans "Adjustments/Refunds" %}:</strong> {{ reg.invoiceitem.adjustments|floatformat:2 }}
-				{% endif %}
-				{% if reg.invoiceitem.revenueMismatch or reg.invoiceitem.revenueNotYetReceived %}<br />
-				<strong>{% trans "Recorded Revenue" %}:</strong> {{ reg.invoiceitem.revenueReported|floatformat:2 }}<br />
-				<strong>{% trans "Received Revenue" %}:</strong> {{ reg.invoiceitem.revenueReceived|floatformat:2 }}<br />
-				{% endif %}
+		<td>
+		<strong>{% trans "Role" %}:</strong> {% if reg.role %}{{ reg.role }}{% else %}{% trans "N/A" %}{% endif %}<br />
+			{% if reg.dropIn %}
+				<strong>{% trans "Drop-in" %}{% if reg.occurrences.all %}:{% endif %}</strong>
+				{% for occ in reg.occurrences.all %}
+					{{ occ.startTime|date:"SHORT_DATE_FORMAT" }}{% if not forloop.last %}, {%endif %}
+				{% endfor %}<br />
+			{% endif %}
+			{% if reg.registration.payAtDoor %}<strong>{% trans "Door registration" %}</strong><br />{% endif %}
+			{% if reg.registration.student %}<strong>{% trans "Student status" %}</strong>{% endif %}
+		</td>
+
+		{% if event.partnerRequired %}
+		<td>
+			{% if reg.data.partner %}
+				{{ reg.data.partner.firstName }} {{ reg.data.partner.lastName }}
 			{% else %}
-				{{reg.price|floatformat:2 }}
+				{% trans "N/A" %}
 			{% endif %}
 		</td>
+		{% endif %}
+
+		<td {% if reg.warningFlag %}class="warning"{% elif reg.refundFlag %}class="info"{% endif %}>
+			{% if reg.discounted or reg.warningFlag %}
+				<strong>{% trans "Gross" %}:</strong> {{ reg.invoiceItem.grossTotal|floatformat:2 }} <br />
+				<strong>{% trans "Net" %}:</strong> {{ reg.invoiceItem.total|floatformat:2 }}
+				{% if reg.refundFlag %}<br />
+				<strong>{% trans "Adjustments/Refunds" %}:</strong> {{ reg.invoiceItem.adjustments|floatformat:2 }}
+				{% endif %}
+				{% if reg.invoiceItem.revenueMismatch or reg.invoiceItem.revenueNotYetReceived %}<br />
+				<strong>{% trans "Recorded Revenue" %}:</strong> {{ reg.invoiceItem.revenueReported|floatformat:2 }}<br />
+				<strong>{% trans "Received Revenue" %}:</strong> {{ reg.invoiceItem.revenueReceived|floatformat:2 }}<br />
+				{% endif %}
+			{% else %}
+				{{ reg.invoiceItem.total|floatformat:2 }}
+			{% endif %}
+		</td>
+
 		
+		{% with reg.registration.invoiceDetails as details %}
 		<td 
 		{% if reg.warningFlag %}
 			class="warning"
@@ -82,72 +114,74 @@
 			class="info"
 		{% endif %}>
 			{% if reg.registration.warningFlag or reg.registration.refundFlag %}
-				<strong>{% trans "Gross Price" %}:</strong> {{ reg.registration.totalPrice|floatformat:2 }} <br />
+				<strong>{% trans "Gross Price" %}:</strong> {{ details.grossTotal|floatformat:2 }} <br />
 				<strong>{% trans "Net Price" %}:</strong>
-				{% if reg.registration.discounted %}
-					<a href="" data-toggle="popover" title="{% trans 'Gross vs. Net Price' %}" data-container="body" data-placement="top" data-content="
-					{% if reg.registration.discountCode %}{% trans 'Discount Code' %}: {{ reg.registration.discountCode.name }}, {% endif %}
+				{% if details.grossTotal != details.total %}
+					<a href="javascript://" data-toggle="popover" title="{% trans 'Gross vs. Net Price' %}" data-container="body" data-placement="top" data-content="
 					{% for d in reg.registration.registrationdiscount_set.all %}
 						{% if d.discountAmount > 0 %}
 							{% trans 'Discount' %}: {{ d.discount.name }} = -{{ d.discountAmount }}, 
 						{% endif %}					
 					{% endfor %}
-					{% for v in reg.registration.voucheruse_set.all %}
+					{% for v in reg.registration.invoice.voucheruse_set.all %}
 						{% if v.amount > 0 %}
 					 		{% trans 'Voucher' %}: {{ v.voucher.voucherId }} = -{{ v.amount }}, 
 						{% endif %}
 					{% endfor %}">
-					{{ reg.registration.priceWithDiscount|floatformat:2 }}</a>
+					{{ details.total|floatformat:2 }}</a>
 				{% else %}
-				 	{{ reg.registration.priceWithDiscount|floatformat:2 }}
+				 	{{ details.total|floatformat:2 }}
 				{% endif %}
 				{% if reg.registration.refundFlag %}<br />
-				<strong>{% trans "Adjustments/Refunds" %}:</strong> {{ reg.registration.invoice.adjustments|floatformat:2 }}
+				<strong>{% trans "Adjustments/Refunds" %}:</strong> {{ details.adjustments|floatformat:2 }}
 				{% endif %}
 				{% if reg.registration.invoice.outstandingBalance != 0 %}<br />
-				<strong>{% trans "Invoice Status" %}:</strong> {{ reg.registration.invoice.statusLabel }}<br />
+				<strong>{% trans "Invoice Status" %}:</strong> {{ reg.registration.invoice.get_status_display }}<br />
 				<strong>{% trans "Outstanding Balance" %}:</strong> {{ reg.registration.invoice.outstandingBalance|floatformat:2 }}<br />
 				{% endif %}
 			{% else %}
-				{% if reg.registration.discounted %}
-					<strong>{% trans "Gross Price" %}:</strong> {{ reg.registration.totalPrice|floatformat:2 }} <br />
+				{% if details.grossTotal != details.total %}
+					<strong>{% trans "Gross Price" %}:</strong> {{ details.grossTotal|floatformat:2 }} <br />
 					<strong>{% trans "Net Price" %}:</strong>
-					<a href="" data-toggle="popover" title="{% trans 'Gross vs. Net Price' %}" data-container="body" data-placement="top" data-content="
-					{% if reg.registration.discountCode %}{% trans 'Discount Code' %}: {{ reg.registration.discountCode.name }}, {% endif %}
-					{% for v in reg.registration.voucheruse_set.all %}
+					<a href="javascript://" data-toggle="popover" title="{% trans 'Gross vs. Net Price' %}" data-container="body" data-placement="top" data-content="
+					{% for d in reg.registration.registrationdiscount_set.all %}
+						{% if d.discountAmount > 0 %}
+							{% trans 'Discount' %}: {{ d.discount.name }} = -{{ d.discountAmount }}, 
+						{% endif %}					
+					{% endfor %}
+					{% for v in reg.registration.invoice.voucheruse_set.all %}
 						{% if v.amount > 0 %}
 					 		{% trans 'Voucher' %}: {{ v.voucher.voucherId }} = -{{ v.amount }}, 
 						{% endif %}
 					{% endfor %}">
-					{{ reg.registration.priceWithDiscount|floatformat:2 }}</a>
+					{{ details.total|floatformat:2 }}</a>
 				{% else %}
-					{{ reg.registration.totalPrice|floatformat:2 }}
+					{{ details.total|floatformat:2 }}
 				{% endif %}
 			{% endif %}
 		</td>
-		
+		{% endwith %}
+
+		<td>{{ reg.customer.numClassSeries }}</td>
 		<td>
-			{% if reg.role %}{{ reg.role }}{% endif %}
-			{% if reg.dropIn %}{% trans "Drop-in" %}{% endif %}
-			{% if not reg.role and not reg.dropIn %}{% trans "N/A" %}{% endif %}
-		</td>
-		<td><a href="tel:{{ reg.registration.customer.phone }}">{{ reg.registration.customer.phone }}</a></td>
-		<td><a href="mailto:{{ reg.registration.customer.email }}">{{ reg.registration.customer.email }}</a></td>
-		<td>{{ reg.registration.customer.numClassSeries }}</td>
-		<td>
-		<div class="btn-group">
-		{% if 'core.view_all_invoices' in perms and reg.registration.invoice %}
-			<a class="btn btn-outline-secondary btn-sm" href="{% url 'viewInvoice' reg.registration.invoice.id %}">{% trans "Invoice" %}</a>
-		{% endif %}
-		{% if 'core.change_registration' in perms %}
-			<a class="btn btn-outline-secondary btn-sm" href="{% url 'admin:core_registration_change' reg.registration.id %}">{% trans "Reg." context "registration" %}</a>
-		{% endif %}
-		{% if 'core.process_refunds' in perms and reg.registration.invoice %}
-			<a class="btn btn-outline-secondary btn-sm" href="{% url 'refundProcessing' reg.registration.invoice.id %}">{% trans "Refund" %}</a>
-		{% endif %}
-		{% if 'financial.change_revenueitem' in perms and reg.invoiceitem.revenueitem %}
-			<a class="btn btn-outline-secondary btn-sm" href="{% url 'admin:financial_revenueitem_change' reg.invoiceitem.revenueitem.id %}">{% trans "Rev. Item" %}</a>
-		{% endif %}
+		<div class="dropdown show">
+			<a class="btn btn-light btn-sm dropdown-toggle" href="#" role="button" id="itemsLink_{{ reg.id }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				{% trans "Related Items" %}
+			</a>			
+			<div class="dropdown-menu" aria-labelledby="itemsLink_{{ reg.id }}">
+				{% if 'core.view_all_invoices' in perms and reg.registration.invoice %}
+					<a class="dropdown-item" href="{% url 'viewInvoice' reg.registration.invoice.id %}">{% trans "Invoice" %}</a>
+				{% endif %}
+				{% if 'core.change_registration' in perms %}
+					<a class="dropdown-item" href="{% url 'admin:core_registration_change' reg.registration.id %}">{% trans "Registration" %}</a>
+				{% endif %}
+				{% if 'core.process_refunds' in perms and reg.registration.invoice %}
+					<a class="dropdown-item" href="{% url 'refundProcessing' reg.registration.invoice.id %}">{% trans "Refund" %}</a>
+				{% endif %}
+				{% if 'financial.change_revenueitem' in perms and reg.invoiceItem.revenueitem %}
+					<a class="dropdown-item" href="{% url 'admin:financial_revenueitem_change' reg.invoiceItem.revenueitem.id %}">{% trans "Revenue Item" %}</a>
+				{% endif %}
+			</div>
 		</div>
 		</td>
 	</tr>
@@ -161,20 +195,20 @@
 
 	<div id="update_ok" style="display:none; font-size: 1.5em; color: #0a0; background-color: #ddd; padding: 0.5em; width: 95%;">{% trans "Check-ins submitted successfully!" %}</div>
 	<div id="update_error" style="display:none; font-size: 1.5em; color: #a00; background-color: #ddd; padding: 0.5em; width: 95%;">{% trans "Error submitting class check-in data." %}</div>
-	
+
 	<form id="quickreg_form" method="post" action="{% url 'submitQuickreg' %}">
 		{% csrf_token %}
 		{{ form.media }}
 		{{ form.as_p }}
 		<input class="btn btn-primary" type="submit" value="{% trans 'Submit Payment' %}" />
 	</form>
-
+    
 {% endif %}
 
 <hr />
 
 <p>
-<a class="btn btn-secondary btn-sm" href="{% url 'singleClassRegistration' event.uuid %}">{% trans "Class Registration Page" %}</a>
+<a class="btn btn-secondary btn-sm" href="{% url 'registration' %}">{% trans "Class Registration Page" %}</a>
 <a class="btn btn-secondary btn-sm" href="{% url 'viewregistrations_selectevent' %}">{% trans "Select Another Class" %}</a>
 </p>
 
@@ -187,11 +221,14 @@
 	regParams = {
 		event: "{{ event.id }}",
 		ajaxUrl: "{% url 'ajax_checkin' %}",
-		basePrice: "{{ event.basePrice }}",
+        basePrice: "{{ event.basePrice }}",
 		dropInPrice : "{{ event.pricingTier.dropinPrice }}"
 	}
 
 	function getCheckIns() {
+
+		$('.checkInCheckBox').removeAttr('disabled');
+		$('.checkInCheckBox').show();
 
 		var this_request = {
 			request: "get_all",
@@ -204,17 +241,10 @@
 			this_request["checkin_type"] = "O";
 			this_request["occurrence_id"] = thisOccurrence;
 
-			$(".dropInReg").each(function() {
-				if (this.id.includes(thisOccurrence)){
-					this.style.display = "table-row";
-				} else {
-					this.style.display = "none";
-				}
-			});
-		} else {
-			$(".dropInReg").each(function() {
-				this.style.display = "table-row";
-			});
+			var mismatched = $('.checkInCheckBox[data-drop-in="true"][data-occurrence-ids!=""]').not('[data-occurrence-ids*="' + thisOccurrence + '"]');
+			$(mismatched).attr('disabled', true);
+			$(mismatched).hide();
+
 		}
 
 	    $.ajax(
