--- a/custom/testapp/templates/cms/navbar.html
+++ b/custom/testapp/templates/cms/navbar.html
@@ -31,7 +31,7 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle pl-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-phone"></span>&nbsp;<span class="caret"></span></a>
       <ul class="dropdown-menu dropdown-menu-right" style="position: absolute;">
-        <li><a class="dropdown-item" href="tel:+380636513126"><span class="fa fa-phone"></span>&nbsp;+38 063 6513126 ({% trans 'Kuva' %})</a></li>
+        <li><a class="dropdown-item" href="tel:+380636513126"><span class="fa fa-phone"></span>&nbsp;+38 063 6513126 ({% trans 'Serhii' %})</a></li>
         <li><a class="dropdown-item" href="tel:+380634571300"><span class="fa fa-phone"></span>&nbsp;+38 063 4571300 ({% trans 'Maria' %})</a></li>
         <li><a class="dropdown-item" href="tel:+380677082857"><span class="fa fa-phone"></span>&nbsp;+38 067 7082857 ({% trans 'Anna' %})</a></li>
       </ul>
