proper handling of 'user is not a judge' error

--- a/custom/testapp/templates/sc/comp_judge.html
+++ b/custom/testapp/templates/sc/comp_judge.html
@@ -7,7 +7,8 @@
     {{ form.as_p }}
     {% if error_message %}
     <p class="error">{{ error_message }}</p>
-    {% endif %}
+    {% else %}
     <button type="submit">{% trans 'Submit results' %}</button>
+    {% endif %}
 </form>
 {% endblock %}
