--- a/custom/testapp/templates/sc/comp_judge.html
+++ b/custom/testapp/templates/sc/comp_judge.html
@@ -4,7 +4,14 @@
 {% block content %}
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% for field in form %}
+        {% if field.label != '' %}
+            {{ field }}
+            {{ field.label }}
+        {% else %} 
+            {{ field }}
+        {% endif %}    
+    {% endfor %}  
     {% if error_message %}
     <p class="error">{{ error_message }}</p>
     {% else %}
