final_heat_order; judge finals link; other minor fixes

--- a/custom/testapp/templates/sc/comp_prelims.html
+++ b/custom/testapp/templates/sc/comp_prelims.html
@@ -30,5 +30,9 @@
     {% endfor %}
 
 </table>
+{% if comp_id %}
+<a href="{% url 'redirect_user' comp_id %}">{% trans 'Judge Finals' %}</a>
+{% endif %}
+
 {% endif %}
 {% endblock %}
