--- a/custom/testapp/templates/sc/comp_prelims.html
+++ b/custom/testapp/templates/sc/comp_prelims.html
@@ -19,11 +19,11 @@
         </tr>
         {% for competitor,results_row in role_dict.results.items %}
             <tr>
-                <td>{{ competitor[0] }} </td>
-                {% if reg.finalist and results_row %}
-                <th>{{ competitor[1] }}</th>
+                <td>{{ competitor.0 }} </td>
+                {% if competitor.2 and results_row %}
+                <th>{{ competitor.1 }}</th>
                 {% else %}
-                <td>{{ competitor[1] }}</td>
+                <td>{{ competitor.1 }}</td>
                 {% endif %}
                 {% for res in results_row %}
                     <td>{{ res }}</td>
