--- a/custom/testapp/templates/sc/comp_prelims.html
+++ b/custom/testapp/templates/sc/comp_prelims.html
@@ -14,27 +14,23 @@
             <th></th>
             <th>{{ comp_role }}</th>
             {% for judge in role_dict.judges %}
-                <th>{{ judge }}</th>
+                <th style="text-align:center;">{{ judge }}</th>
             {% endfor %}
         </tr>
         {% for competitor,results_row in role_dict.results.items %}
             <tr>
-                <td>{{ competitor.0 }} </td>
+                <td style="text-align:right;">{{ competitor.0 }}</td>
                 {% if competitor.2 and results_row %}
                 <th>{{ competitor.1 }}</th>
                 {% else %}
                 <td>{{ competitor.1 }}</td>
                 {% endif %}
                 {% for res in results_row %}
-                    <td>{{ res }}</td>
+                    <td style="text-align:center;">{{ res }}</td>
                 {% endfor %} 
             </tr>
         {% endfor %}
     {% endfor %}
-
-
-
-
 </table>
 {% endif %}
 {% endblock %}
